# Anvil

./: .gitignore  README.md  SOURCE.txt  build.bat  build_all.py
.cursor/rules/: github-fork.mdc
anvil/: README.md  pyproject.toml
anvil/src/anvil/: agent.py  api.py  attachments.py  browser_mcp_install.py  chat.py  input_loop.py  mcp_client.py  mcp_config.example.json  models.py  permissions.py  reasoning.py  renderer.py  roblox_mcp_install.py  skills.py  storage.py  system_prompt.py  tool_schema.py  tools.py  ultracode.py  workflows_ui.py
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/assets/: make_icon.py  prepare_logo.py
app/electron/: main.js  preload.cjs  splash.html
app/scripts/: freeport.mjs  patch-win-branding.mjs
app/src/: App.tsx  CodeEditor.tsx  FileIcon.tsx  FileTree.tsx  editorUtils.ts  index.css  main.tsx
scripts/: publish_release.py  verify_features.py
server/: requirements.txt  server.py
