[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "3.0.0"
description = "Anvil — AI coding agent library (GUI bridge backend)"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "tiktoken>=0.7",
    "mcp>=1.0",
]


[tool.setuptools.packages.find]
where = ["src"]
